--- a/style.css
+++ b/style.css
@@ -3,10 +3,38 @@ body{
     height: 100vh;
     margin: auto;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 #section-1{
     background-color: #1f2937;
+    height: 40vh;
+}
+#subsection-1{
+    margin: 0 100px;
     height: 22.5vh;
+}
+#Header-links{
+    display: inline-flex;
+    width: 100%;
+    margin-bottom: 5vh;
+}
+#subsection-1-content-1{
+    display: block;
+    width: 50%;
+    margin: 0;
+}
+#subsection-1-content-2{
+    width: 50%;
+    height: auto;
+    background-color: gray;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#main-subsection{
+    display: flex;
+    flex-direction: row;
 }
 #section-2{
     background-color: white;
@@ -28,5 +56,42 @@ footer{
     justify-content: center;
     align-items: center;
     margin: 0;
-    font-family: 'Roboto', sans-serif;
+}
+ul{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 30px;
+    font-size: 18px;
+    color: #e5e7eb;
+}
+a{
+    text-decoration: none;
+    color: white;
+}
+h3{
+    color: #F9FAF8;
+    margin: auto auto auto 0;
+    font-size: 24px;
+}
+h1{
+    margin: 0;
+    font-size: 48px;
+    color: #F9FAF8;
+}
+#first-paragraf{
+    margin: 10px 0;
+    font-size: 18px;
+    color: #e5e7eb;
+}
+button{
+    color: #e5e7eb;
+    border-radius: 10px;
+    background-color: #3882f6;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+    padding: 10px 30px;
+    margin: 0;
 }
