--- a/style.css
+++ b/style.css
@@ -48,7 +48,10 @@ body{
 }
 #section-4{
     background-color: white;
-    height: 22.5vh;
+    height: 40vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 footer{
     background-color: #1f2937;
@@ -140,4 +143,31 @@ h1{
     display: inline-block;
     text-align: right;
     width: 100%;
+}
+#subsection-4{
+    margin: 0 100px;
+    background-color: #3882f6;
+    width: 100%;
+    height: 50%;
+    border-radius: 10px;
+    border: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+}
+#content-subsection-4{
+    display: block;
+    color: #F9FAF8;
+    margin-left: 100px;
+}
+#button-subsection-4{
+    border: 2px solid #F9FAF8;
+    border-radius: 5px;
+    color: #F9FAF8;
+    background-color: #3882f6;
+    padding: 10px 30px;
+    font-size: 18px;
+    cursor: pointer;
+    margin-right: 100px;
 }
